Fixed unevent spacing.

--- a/src/app/ranked-choice/ranked-choice.component.css
+++ b/src/app/ranked-choice/ranked-choice.component.css
@@ -47,7 +47,6 @@ span.option-list {
     padding: 2.5px;
     border-radius: 2.5px;
     text-align: center;
-    width: 100%;
     vertical-align: middle;
     background-color: #99AAB5;
     cursor: all-scroll;
