--- a/src/app/ranked-option/ranked-option.component.css
+++ b/src/app/ranked-option/ranked-option.component.css
@@ -4,7 +4,6 @@ div {
     padding: 2.5px;
     border-radius: 2.5px;
     text-align: center;
-    width: 100%;
     vertical-align: middle;
     background-color: #7289DA;
     cursor: all-scroll;
